operators/cert-manager/operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-cert-manager-operator
  annotations:
    argocd.argoproj.io/sync-wave: "0"
